# distroinfo

./: .gitignore  .gitreview  .zuul.yaml  HACKING  README.md  README.rst  groups  project.config  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
distroinfo/: __init__.py  cli.py  exception.py  fetch.py  helpers.py  info.py  parse.py  query.py  repoman.py  shell.py
playbooks/: README.md  codestyle.yaml  dlrn-master.yaml  integration.yaml  py2-tests.yaml  py3-tests.yaml
scripts/: di.py
tests/: test_common.py
tests/assets/info/broken/: circle1.yml  circle2.yml  circle3.yml  invalid-import.yml  self.yml
tests/assets/info/minimal/: conf-templates.yml  minimal.yml  packages.yml  releases.yml  remote.yml
tests/assets/info/rdoinfo/: README  deps.yml  rdo.yml  sync_from_rdoinfo.sh
tests/assets/info/remote-extra-1/: extra.yml
tests/integration/: test_rdoinfo_online.py
tests/unit/: test_common.py  test_core.py  test_query.py  test_rdoinfo.py  test_rdoinfo_offline.py  test_rdoinfo_online.py  test_remote_info.py
