[metadata]
name = distroinfo
summary = python module for parsing, validating and querying distribution/packaging metadata stored in human readable and reviewable text/YAML files
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Jakub Ruzicka
author-email = jruzicka@redhat.com
home-page = https://github.com/softwarefactory-project/distroinfo
keywords =

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    distroinfo

[aliases]
test = pytest

[pycodestyle]
exclude = build,lib,.tox,third,*.egg,docs,packages,.eggs
