[metadata]
name = distroinfo
summary = python module for parsing, validating and querying distribution/packaging metadata stored in human readable and reviewable text/YAML files
description_file = README.rst
long_description_content_type = text/x-rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Jakub Ruzicka
author_email = dev@lists.rdoproject.org
home_page = https://github.com/softwarefactory-project/distroinfo
keywords =

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
install_requires =
    pbr>=6.0.0
    PyYAML
    requests
    six

[options.extras_require]
tests =
    pytest
    pycodestyle

[files]
packages =
    distroinfo

[pycodestyle]
# E123, E125 skipped as they are invalid PEP-8.
ignore = E123,E125
show-source = True
exclude = build,lib,.tox,third,*.egg,docs,packages,.eggs
